Fix image preview stretched

--- a/app/webpack/styles/modules/images.scss
+++ b/app/webpack/styles/modules/images.scss
@@ -4,8 +4,18 @@
   object-fit: cover;
 }
 
-.tb-profile-image {
+.tb-profile-image-wrapper {
   position: relative;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+}
+
+.tb-profile-image {
   background-color: $gray-200;
   border-radius: 50%;
   object-position: center;
